--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "solc": "^0.8.17",
     "typescript": "^4.9.3",
