--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha",
+    "test": "nyc mocha",
     "eject": "react-scripts eject",
     "build-contract": "node ./src/ethereum/compile.js",
     "deploy-contract": "node ./src/ethereum/deploy.js"
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "nyc": "^15.1.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
