--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "chart.js": "^4.0.1",
+    "firebase": "^9.22.0",
     "fs-extra": "^10.1.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^10.1.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@firebase/firestore-types": "^2.5.1",
     "autoprefixer": "^10.4.13",
     "nyc": "^15.1.0",
     "postcss": "^8.4.19",
